# lenguaje2

./: .gitignore  README.md
ProyectoDos/: Makefile.win  ProyectoDos.dev  ProyectoDos.layout  ProyectoDosApp.cpp  ProyectoDosApp.h  ProyectoDosApp.rc  ProyectoDosFrm.cpp  ProyectoDosFrm.h  ProyectoDosFrm.wxform
ProyectoUno/: Makefile.win  ProyectoUno.dev  ProyectoUno.layout  ProyectoUnoApp.cpp  ProyectoUnoApp.h  ProyectoUnoApp.rc  ProyectoUnoFrm.cpp  ProyectoUnoFrm.h  ProyectoUnoFrm.wxform  mipanel.cpp  mipanel.h
ProyectoUno/Images/: ProyectoUnoFrm_IniciarButton_XPM.xpm  ProyectoUnoFrm_WxToolButton1_XPM.xpm
archivos/: configure  configure.ac
archivos/src/: Makefile.am  Makefile.in  main.cc
cortos/: 001a.cc  001b.cc  002.cc
ejemplos-ordenamiento/: Makefile.in  aclocal.m4  configure  configure.ac
ejemplos-ordenamiento/src/: Makefile.am  Makefile.in  burbuja1.c  burbuja2.c  burbuja3.c  insercion.c  insercion2.c  libgen.c  libgen.h  main.c  mergesort.c  mergesort2.c  quicksort.c  seleccion.c
herencia/: .anjuta_sym_db.db  Makefile.in  configure  configure.ac
herencia/.anjuta/session/: anjuta.session  dock-layout.xml
herencia/src/: Makefile.am  Makefile.in  animal.cc  animal.h  chupacabras.cc  chupacabras.h  main.cc  oveja.cc  oveja.h
ordenamiento-objetos/: aclocal.m4  configure  configure.ac
ordenamiento-objetos/src/: Makefile.am  Makefile.in  burbuja.cc  burbuja.h  burbuja_main.cxx  main.cc
preprocesador/: .anjuta_sym_db.db  README.md  configure  configure.ac
preprocesador/.anjuta/session/: anjuta.session  dock-layout.xml
preprocesador/src/: Makefile.am  Makefile.in  main.cc~  salida_preprocesada.txt  valores.h
reverso/: Makefile.in  configure  configure.ac  entrada.txt
reverso/src/: Makefile.am  Makefile.in  main.cc
tiempo/: .gitignore  README.md  aclocal.m4  configure.ac
tiempo/src/: Makefile.am  Makefile.in  main.cc  tiempo.cc  tiempo.h
