## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = mergesort \
	quicksort \
	insercion2 \
	insercion \
	seleccion \
	burbuja3 \
	burbuja2 \
	burbuja1 \
	ejemplos_ordenamiento

mergesort_SOURCES =  \
	mergesort.c

mergesort_LDADD = libgen.la 

quicksort_SOURCES =  \
	quicksort.c

quicksort_LDADD = libgen.la 

insercion2_SOURCES =  \
	insercion2.c

insercion2_LDADD = libgen.la 

insercion_SOURCES =  \
	insercion.c

insercion_LDADD = libgen.la 

seleccion_SOURCES =  \
	seleccion.c

seleccion_LDADD = libgen.la 

burbuja3_SOURCES =  \
	burbuja3.c

burbuja3_LDADD = libgen.la 

burbuja2_SOURCES =  \
	burbuja2.c

burbuja2_LDADD = libgen.la 

burbuja1_SOURCES =  \
	burbuja1.c

burbuja1_LDADD = libgen.la 

ejemplos_ordenamiento_SOURCES = \
	main.c

ejemplos_ordenamiento_LDFLAGS = 

ejemplos_ordenamiento_LDADD = 


lib_LTLIBRARIES =  \
	libgen.la

libgen_la_SOURCES =  \
	libgen.c \
	libgen.h
