## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = herencia

herencia_SOURCES = \
	main.cc \
	animal.cc \
	animal.h \
	oveja.cc \
	oveja.h \
	chupacabras.cc \
	chupacabras.h

herencia_LDFLAGS = 

herencia_LDADD = 


