## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = ordenamiento_objetos \
	burbuja1

ordenamiento_objetos_SOURCES = \
	main.cc

ordenamiento_objetos_LDFLAGS = 

ordenamiento_objetos_LDADD = 

burbuja1_SOURCES =  \
	burbuja_main.cxx \
	burbuja.cc \
	burbuja.h


